<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_full">F-Droid</string>
    <string name="app_name_basic">F-Droid Basic</string>
    <string name="SignatureMismatch">The new version is signed with a different key to the old one. To install the new
        version, the old one must be uninstalled first. Please do this and try again. (Note that uninstalling will erase
        any internal data stored by the app)
    </string>
    <string name="installIncompatible">App incompatible with your device, install anyway?</string>
    <string name="version">Version</string>
    <string name="by_author_format">by %s</string>
    <string name="delete">Delete</string>
    <string name="prompt_to_send_crash_reports">Prompt to send crash reports</string>
    <string name="prompt_to_send_crash_reports_summary">Gather data about crashes and ask to send them to the
        developer
    </string>
    <string name="cache_downloaded">Keep cached apps</string>
    <string name="updates">Updates</string>
    <string name="unstable_updates">Unstable updates</string>
    <string name="unstable_updates_summary">Suggest updates to unstable versions</string>
    <string name="hide_all_notifications">Hide all notifications</string>
    <string name="hide_all_notifications_summary">Prevent all actions from showing in the status bar and notification
        drawer.
    </string>
    <string name="send_install_history">Send Install History</string>
    <string name="send_fdroid_metrics_report">Send %s Metrics Report</string>
    <string name="send_history_csv">%s install history as CSV file</string>
    <string name="send_fdroid_metrics_json">%s metrics report as JSON file</string>
    <string name="install_history">Install history</string>
    <string name="install_history_and_metrics">Install history and metrics</string>
    <string name="fdroid_metrics_report">%s Metrics Report</string>
    <string name="install_history_summary">View the private log of all installs and uninstalls</string>
    <string name="keep_install_history">Keep install history</string>
    <string name="keep_install_history_summary">Store a log of all installs and uninstalls in a private store</string>
    <string name="send_to_fdroid_metrics">Send usage data</string>
    <string name="send_to_fdroid_metrics_summary">Sends anonymous data weekly to F-Droid Metrics (requires "Keep install history")</string>
    <string name="toast_metrics_in_install_history">The %s Metric report is viewable in the Install History viewer</string>
    <string name="send_version_and_uuid">Send version and UUID to servers</string>
    <string name="send_version_and_uuid_summary">Include this app\'s version and a random, unique ID when
        downloading, takes effect next app restart.</string>
    <string name="force_old_index">Force old index format</string>
    <string name="force_old_index_summary">In case there are bugs or compatibility issues, use the XML app index</string>
    <string name="other">Other</string>
    <string name="update_interval">Automatic update interval</string>
    <string name="over_wifi">Over Wi-Fi</string>
    <string name="over_data">Over data</string>
    <string name="over_network_always_summary">Always use this connection when available</string>
    <string name="over_network_on_demand_summary">Only use this connection when I click to download</string>
    <string name="over_network_never_summary">Never download anything using this connection</string>
    <string name="update_auto_download">Automatically fetch updates</string>
    <string name="update_auto_download_summary">Updates are downloaded automatically and you are notified to install
        them
    </string>
    <string name="update_auto_install">Automatically install updates</string>
    <string name="update_auto_install_summary">Download and update apps in the background, showing a notification</string>
    <string name="notify">Show available updates</string>
    <string name="notify_on">Show a notification when updates are available</string>
    <string name="force_old_installer_title">Force old installer</string>
    <string name="force_old_installer_summary">Disable the Session Installer, including support for automatic background updates.</string>
    <string name="system_installer">Privileged Extension</string>
    <string name="system_installer_on">Use Privileged Extension to install, update, and remove packages</string>
    <string name="local_repo_name">Name of your Local Repo</string>
    <string name="local_repo_name_summary">The advertised title of your local repo: %s</string>
    <string name="local_repo_https_on">Use encrypted HTTPS:// connection for local repo</string>
    <string name="scan_removable_storage_title">Scan removable storage</string>
    <string name="scan_removable_storage_toast">Scanning %s…</string>
    <string name="scan_removable_storage_summary">Look for package repos on removable storage like SD Cards
        and USB thumb drives
    </string>
    <string name="login_title">Authentication required</string>
    <string name="login_name">Username</string>
    <string name="login_password">Password</string>
    <string name="repo_edit_credentials">Change Password</string>
    <string name="repo_error_empty_username">Empty username, credentials not changed</string>
    <string name="app_details">App Details</string>
    <string name="no_such_app">No such app found.</string>
    <string name="app_details_repository">Repository</string>
    <string name="app_details_repositories">Repositories</string>
    <string name="app_details_repository_preferred">(preferred)</string>
    <string name="app_details_repository_button_prefer">Prefer Repository</string>
    <string name="app_details_repository_expand">Expand repository list</string>
    <string name="app_details_donate_prompt_unknown_author">Buy the developers of %1$s a coffee!</string>
    <string name="app_details_donate_prompt">%1$s is created by %2$s. Buy them a coffee!</string>
    <string name="app_details__incompatible_mismatched_signers">Different signer to installed version</string>
    <string name="app_details__no_versions__show_incompat_versions">To show incompatible versions here anyway, enable the \"%1$s\" setting.</string>
    <string name="app_details__no_versions__no_compatible_signers">No versions with compatible signer</string>
    <string name="app_details__no_versions__none_compatible_with_device">No versions compatible with device</string>
    <string name="app_details__no_versions__explain_incompatible_signers">The installed version is not compatible with any available versions. Uninstalling the app will enable you to view and install compatible versions.

This often occurs with apps installed via Google Play or other sources, if they are signed by a different certificate.</string>
    <string name="about_title_full">About F-Droid</string>
    <string name="about_title_basic">About F-Droid Basic</string>
    <string name="about_version">Version</string>
    <string name="about_site">Website</string>
    <string name="about_forum">Support forum</string>
    <string name="about_source">Source code</string>
    <string name="about_license">License</string>
    <string name="app_suggested">Suggested</string>
    <string name="app_incompatible">Incompatible</string>
    <string name="app_installed">Installed</string>
    <string name="app_new">New</string>
    <string name="app_not_installed">Not Installed</string>
    <string name="app_inst_known_source">Installed (from %s)</string>
    <string name="app_inst_unknown_source">Installed (from unknown source)</string>
    <string name="app_version_x_available">Version %1$s available</string>
    <string name="app_version_x_installed">Version %1$s</string>
    <string name="app_recommended_version_installed">Version %1$s (Recommended)</string>
    <string name="added_on">Added on %s</string>
    <string name="app__tts__cancel_download">Cancel download</string>
    <string name="app__install_downloaded_update">Update</string>
    <string name="app_installed_media">File installed to %s</string>
    <string name="app_permission_storage">F-Droid needs the storage permission to install this to storage. Please allow it on the next screen to proceed with installation.</string>
    <string name="app_size">Size: %1$s</string>
    <string name="app_error_open">Could not launch app.</string>
    <string name="app_list_results_hidden_antifeature_settings">Some apps are hidden based on your Anti-Features settings. Touch to change.</string>
    <string name="app_list_no_suggested_version">No version recommended for installation.</string>
    <string name="app_list__name__downloading_in_progress">Downloading %1$s</string>
    <string name="app_list__name__successfully_installed">%1$s installed</string>
    <string name="app_list_download_ready">Downloaded, ready to install</string>
    <string name="app_list__dismiss_app_update">Update ignored</string>
    <string name="app_list__dismiss_vulnerable_app">Vulnerability ignored</string>
    <string name="app_list__dismiss_downloading_app">Download canceled</string>
    <string name="installed_apps__activity_title">Installed Apps</string>
    <string name="send_installed_apps">Share installed apps</string>
    <string name="send_installed_apps_csv">Apps installed by F-Droid as CSV file</string>
    <string name="installed_app__updates_ignored">Updates ignored</string>
    <string name="installed_app__updates_ignored_for_suggested_version">Updates ignored for Version %1$s</string>
    <string name="updates__app_with_known_vulnerability__prompt_uninstall">We found a vulnerability with %1$s. We recommend uninstalling this app immediately.</string>
    <string name="updates__app_with_known_vulnerability__prompt_upgrade">We found a vulnerability with %1$s. We recommend updating to the newest version immediately.</string>
    <string name="updates__app_with_known_vulnerability__ignore">Ignore</string>
    <string name="updates__tts__download_app">Download</string>
    <string name="update_all">Update all</string>
    <string name="updates__hide_updateable_apps">Hide apps</string>
    <string name="updates__show_updateable_apps">Show apps</string>
    <plurals name="updates__download_updates_for_apps">
        <item quantity="one">Download update for %1$d app:</item>
        <item quantity="other">Download updates for %1$d apps:</item>
    </plurals>
    <string name="updates_disabled_by_settings">All updates disabled by Data/WiFi Settings</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="repo_add_new_title">Add repository</string>
    <string name="repo_add_add">Add</string>
    <string name="repo_add_mirror">Add mirror</string>
    <string name="clear_search">Clear search</string>
    <string name="menu_install">Install</string>
    <string name="search_hint">Search apps</string>
    <string name="empty_search_available_app_list">No matching applications available.</string>
    <string name="antifeatures_upgrade_card_title">Anti-Features updated</string>
    <string name="antifeatures_upgrade_card_intro">As a daily process reviewing apps on F-Droid, we strike to place the best tags on apps to indicate features that you might not like. We have updated the list of Anti-Features to better describe their nature and fairly reflect what they mean.</string>
    <string name="antifeatures_upgrade_card_direction">Please take a moment to see if you would like to include apps with the new Anti-Feature, which is enabled by default for new users:</string>
    <string name="antifeatures_upgrade_card_postscript">Apps with a disabled Anti-Feature will be hidden. You can change this anytime in the setting below.</string>
    <string name="antifeatures_upgrade_card_enable">Enable</string>
    <string name="antifeatures_upgrade_card_disable">Stay disabled</string>
</resources>