<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antifeatures_upgrade_card_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/antifeatures_upgrade_card_intro"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/antifeatures_upgrade_card_direction"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="?android:attr/textColorSecondary" />

        <LinearLayout
            android:id="@+id/antifeatures_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/antifeatures_upgrade_card_postscript"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="?android:attr/textColorSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="-8dp"
            android:layout_marginEnd="-8dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/antifeatures_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/antifeatures_upgrade_card_disable"
                style="?attr/borderlessButtonStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/antifeatures_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/antifeatures_upgrade_card_enable" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>