<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingEnd="4dp"
    android:paddingRight="4dp"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/basic_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="1.2.3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="3dp">

                    <TextView
                        android:id="@+id/status_suggested"
                        style="@style/AppVersionStatus"
                        android:background="@drawable/app_version_item_status_suggested"
                        android:text="@string/app_suggested"
                        android:textColor="#429fff" />

                    <TextView
                        android:id="@+id/status_installed"
                        style="@style/AppVersionStatus"
                        android:background="@drawable/app_version_item_status_installed"
                        android:text="@string/app_installed"
                        android:textColor="#19c878"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/status_incompatible"
                        style="@style/AppVersionStatus"
                        android:background="@drawable/app_version_item_status_incompatible"
                        android:text="@string/app_incompatible"
                        android:textColor="#d86758" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textSize="13sp"
                tools:text="Added on 31/12/2050" />
        </LinearLayout>

        <ImageView
            android:id="@+id/expand_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_expand_more_grey600" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expanded_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basic_layout"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textColor="?attr/lightGrayTextColor"
                    android:textSize="12sp"
                    tools:text="F-Droid" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textColor="?attr/lightGrayTextColor"
                    android:textSize="12sp"
                    tools:text="Size: 4.8 MiB" />

                <TextView
                    android:id="@+id/api"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textColor="?attr/lightGrayTextColor"
                    android:textSize="12sp"
                    tools:text="Android 4.1 or later" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_install_upgrade"
                style="@style/DetailsButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/app_version_button_bg_selector_install_upgrade"
                android:textColor="@color/fdroid_blue"
                app:textAllCaps="true"
                tools:text="@string/menu_install" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_downgrade"
                style="@style/DetailsButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/app_version_button_bg_selector_downgrade"
                android:text="@string/menu_downgrade"
                android:textColor="#b87032"
                app:textAllCaps="true"
                tools:visibility="gone" />

            <ProgressBar
                android:id="@+id/busy_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                tools:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/incompatible_reasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d86758"
            android:textSize="12sp"
            android:visibility="gone"
            tools:text="Requires: armeabi-v7a"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/target_arch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/lightGrayTextColor"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>
